# gnome-icon-normalizer

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
src/icon_normalizer/: __init__.py  __main__.py  apps.py  normalize.py
