[project]
name = "gnome-icon-normalizer"
version = "0.1.0"
description = "Normalize icon padding for GNOME Dock and app grid"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "cairosvg>=2.9.0",
    "pillow>=9.0.0",
]

[project.scripts]
icon-normalizer = "icon_normalizer.__main__:main"

[project.urls]
Homepage = "https://github.com/Fuunsaiki/gnome-icon-normalizer"
Repository = "https://github.com/Fuunsaiki/gnome-icon-normalizer"
Issues = "https://github.com/Fuunsaiki/gnome-icon-normalizer/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/icon_normalizer"]
